<resources>
    <string name="app_name">Practice For Nike 1</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="user">اطلاعات کاربری</string>
    <string name="search">جستجو</string>
    <string name="newest">جدیدترین</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="productDescription">این کتونی شدیدا برای دویدن و راه رفتن مناسب است و تقریبا هیچ فشار مخربی را به پا و زانوان منتقل نمیکند!</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="highPrice">گران ترین</string>
    <string name="lowPrice">ارزان ترین</string>
    <string name="latest">جدید ترین</string>
    <string name="popular">محبوب ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="unknown_Error">خطای نامشخص</string>
    <string name="success_addToCart">به سبد خرید اضافه شد!</string>
    <string name="loginScreenTitle">ورود به حساب کاربری</string>
    <string name="loginTitle">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="signUp_hint">حساب کاربری ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد کنید</string>
    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="cartEmptyStateLoggingRequired">وارد حساب کاربری خود شوید!</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>

    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="onlinePayment">پرداخت انلاین</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">ادرس پستی</string>
    <string name="mobileNumber">شماره تلفن</string>
    <string name="address">آدرس</string>
    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>

    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest_user">کاربر مهمان</string>

    <string name="favorites_empty_state_message">هنوز محصولی به لیست علاقه مندی اضافه نکردی</string>
    <string name="favorites_help_message">برای حذف محصول انگشت خود را روی آن نگه دارید</string>

    <string name="orderHistory_orderId">شناسه سفارش</string>
    <string name="orderHistory_payable">مبلغ</string>

    <string-array name="sort">

        <item>@string/newest</item>
        <item>@string/popular</item>
        <item>@string/highPrice</item>
        <item>@string/lowPrice</item>

    </string-array>
</resources>