<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_nike_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginScreenTitle"
            android:textAppearance="?textAppearanceHeadline5"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authHint"
            android:layout_marginTop="10dp"
            android:textAppearance="?textAppearanceBody2"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="@dimen/authItemWidth"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="@dimen/authItemWidth"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="@dimen/authItemWidth"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:minHeight="45dp"
            android:gravity="center"
            app:cornerRadius="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_hint"
            android:alpha="0.4"
            android:textAppearance="?textAppearanceBody1"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>