<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:src="@drawable/ic_nike_logo"
                android:layout_gravity="center|center_vertical"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_et_home"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/search"
                android:textColorHint="?android:textColorSecondary"
                android:drawableEnd="@drawable/ic_search"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/bannerSliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="15dp"/>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="12dp"
                    app:dotsColor="@color/indicatorGray"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="5dp"
                    app:dotsSpacing="3dp"
                    app:dotsWidthFactor="4"
                    app:selectedDotColor="@color/black"
                    app:progressMode="false" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/newest"
                    android:textAppearance="?textAppearanceHeadline6"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewAllProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/viewAll"/>

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newestProductRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:clipToPadding="true"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>